First version of personal website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,69 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Andi Dong's Homepage</title>
+</head>
+
+<body>
+  <div class="webcontainer">
+
+    <!-- Header -->
+    <div id="header">
+      <div class="nav-bar">
+        <div class="brand">
+          <a href="index.html">
+            <h1><span>A</span>ndi <span>D</span>ong</h1>
+          </a>
+        </div>
+        <div class="nav-list">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="/Project/index.html">Projects</a></li>
+            <li><a href="/Contact/index.html">Contact</a></li>
+            <li><a href="/About/index.html">About</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <!-- Content -->
+    <div id="content">
+      <div class="container">
+        <h1>Education <span></span></h1>
+        <p><b>NORTHEASTERN UNIVERSITY, Seattle, WA</b>&nbsp&nbsp&nbsp&nbsp Sept.2020 - April.2023 (Expected)<span></span></p>
+        <p>Master of Science in Computer Science, GPA: 4.00/4.00<span></span></p>
+        <p><b>UCLA (University of California, Los Angeles), Los Angeles, CA</b>&nbsp&nbsp&nbsp&nbsp Aug.2015 - June 2016<span></span></p>
+        <p>Master of Architecture, GPA: 3.84/4.00<span></span></p>
+      </div>
+      <div class="container">
+        <h1>WORK EXPERIENCE <span></span></h1>
+        <p><b>NORTHEASTERN UNIVERSITY</b> | Graduate Teaching Assistant | Seattle, WA &nbsp&nbsp&nbsp&nbsp Jan - May.2022<span></span></p>
+        <p>Course assisted in: Algorithm (CS5800)</p>
+        <ul>
+          <li><p>Assisted professors to organize and facilitate the graduate-level course CS5800 for Spring 2022 semester.</p></li>
+          <li><p>Mentored students by facilitating lab recitations, hosting office hours, providing 1-1 tutoring, and grading assignments.</p></li>
+        </ul>
+        <p><b>SHEN-LINK TECHNOLOGY</b> | Software Engineering Intern | Liaoning, China &nbsp&nbsp&nbsp&nbsp Jan - May.2021<span></span></p>
+        <ul>
+          <li><p>Developed an information publishment system for an intelligent environmental control platform by using AJAX and VUE for front-
+            end and Java for back-end.</p></li>
+          <li><p>Created all the APIs needed to handle HTTP requests and responses from both front-end and back-end.</p></li>
+          <li><p>Implemented the published information on the different size of screens (from 7.5’ table card to 55’ screen) by Flutter.</p></li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Footer -->
+    <div id="footer">
+      <div class="footer container">
+        <p>Copyright © 2022 Andi Dong. All rights reserved</p>
+      </div>
+    </section>
+  </div>
+</body>
+
+</html>
