Website second version

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div class="nav-list">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="/Project/index.html">Projects</a></li>
-            <li><a href="/Contact/index.html">Contact</a></li>
-            <li><a href="/About/index.html">About</a></li>
+            <li><a href="./Project/index.html">Projects</a></li>
+            <li><a href="./Contact/index.html">Contact</a></li>
+            <li><a href="./About/index.html">About</a></li>
           </ul>
         </div>
       </div>
