--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="nav-list">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="./Project/index.html">Projects</a></li>
+            <li><a href="andidong.github.io/Project/index.html">Projects</a></li>
             <li><a href="./Contact/index.html">Contact</a></li>
             <li><a href="./About/index.html">About</a></li>
           </ul>
