--- a/About/index.html
+++ b/About/index.html
@@ -16,15 +16,15 @@
     <div id="header">
       <div class="nav-bar">
         <div class="brand">
-          <a href="./index.html">
+          <a href="../index.html">
             <h1><span>A</span>ndi <span>D</span>ong</h1>
           </a>
         </div>
         <div class="nav-list">
           <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./Project/index.html">Projects</a></li>
-            <li><a href="./Contact/index.html">Contact</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../Project/index.html">Projects</a></li>
+            <li><a href="../Contact/index.html">Contact</a></li>
             <li><a href="index.html">About</a></li>
           </ul>
         </div>
@@ -56,7 +56,7 @@
         <div class="col-left">
           <div class="about-img">
             <a href="https://www.instagram.com/stella_a_dong/">
-              <img src="/img/Andi_1.jpeg" alt="img">
+              <img src="../img/Andi_1.jpeg" alt="img">
             </a>
           </div>
         </div>
