--- a/Project/index.html
+++ b/Project/index.html
@@ -16,16 +16,16 @@
     <div id="header">
       <div class="nav-bar">
         <div class="brand">
-          <a href="./index.html">
+          <a href="../index.html">
             <h1><span>A</span>ndi <span>D</span>ong</h1>
           </a>
         </div>
         <div class="nav-list">
           <ul>
-            <li><a href="./index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="index.html">Projects</a></li>
-            <li><a href="./Contact/index.html">Contact</a></li>
-            <li><a href="./About/index.html">About</a></li>
+            <li><a href="../Contact/index.html">Contact</a></li>
+            <li><a href="../About/index.html">About</a></li>
           </ul>
         </div>
       </div>
@@ -51,7 +51,7 @@
             </ul>
           </div>
           <div class="project-img">
-            <img src="./img/project1.png" alt="img">
+            <img src="../img/project1.png" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -67,7 +67,7 @@
             </ul>
           </div>
           <div class="project-img">
-            <img src="./img/project2.jpeg" alt="img">
+            <img src="../img/project2.jpeg" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -81,7 +81,7 @@
             </ul>
           </div>
           <div class="project-img">
-            <img src="./img/project3.jpeg" alt="img">
+            <img src="../img/project3.jpeg" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -95,7 +95,7 @@
             </ul>
           </div>
           <div class="project-img">
-            <img src="./img/project4.jpeg" alt="img">
+            <img src="../img/project4.jpeg" alt="img">
           </div>
         </div>
       </div>
