--- a/Contact/index.html
+++ b/Contact/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="contact.css">
   <title>Andi Dong's Contact</title>
 </head>
@@ -16,16 +16,16 @@
     <div id="header">
       <div class="nav-bar">
         <div class="brand">
-          <a href="./index.html">
+          <a href="../index.html">
             <h1><span>A</span>ndi <span>D</span>ong</h1>
           </a>
         </div>
         <div class="nav-list">
           <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./Project/index.html">Projects</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../Project/index.html">Projects</a></li>
             <li><a href="index.html">Contact</a></li>
-            <li><a href="./About/index.html">About</a></li>
+            <li><a href="../About/index.html">About</a></li>
           </ul>
         </div>
       </div>
